# rori_core

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.MD  Cargo.toml  Makefile  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docker/: fedora_27_todo  ubuntu_17
docs/issues/: auth.mermaid
rori_modules/: load_module.py
rori_modules/history/: module.py
rori_modules/rori/: RORI.py  __init__.py  interaction.py  module.py  utils.py
rori_modules/talk/hello_world/: module.py  rsc.json
scripts/: add_module.py  build_fedora.sh  build_ubuntu.sh  generate_modules.py  launch-rori.sh
src/: lib.rs  main.rs
src/rori/: account.rs  api.rs  database.rs  interaction.rs  manager.rs  mod.rs  module.rs  modulemanager.rs  scheduler.rs  server.rs  user.rs
tests/: test_api.rs  test_database.rs  test_manager.rs  test_scheduler.rs  test_server.rs  tests_modules.rs
tests/mocks/: mod.rs
