[package]
name = "rori"
version = "4.0.0"
authors = ["Sébastien Blin <sebastien.blin@savoirfairelinux.com>"]


[dependencies]
dbus = "0.6.1" # requirements libdbus
hyper-native-tls = "*"
iron = "*"
log = "*" # 0.4.1 latest tested
openssl-probe = "0.1.2"
env_logger = "*" # 0.5.4 latest tested
reqwest = "*"
router = "*"
rusqlite = "0.13.0"
serde = "1.0.34"
serde_derive = "1.0.34"
serde_json = "1.0.13"
time = "0.1"

[dependencies.ncurses]
version = "5.91.0"
default-features = false
features = ["wide"]

# For testing
[lib]
name = "core"
