[package]
name = "rori"
version = "4.0.0"
authors = ["Sébastien Blin <sebastien.blin@savoirfairelinux.com>"]


[dependencies]
cpython = "0.2.0"
dbus = "0.6.1" # requirements libdbus
env_logger = "0.5.6"
hyper-native-tls = "0.3.0"
iron = "0.6.0"
log = "0.4.1"
openssl-probe = "0.1.2"
regex = "0.2.9"
reqwest = "0.9.8"
router = "0.6.0"
rusqlite = "0.20.0"
serde = "1.0.34"
serde_derive = "1.0.34"
serde_json = "1.0.13"
time = "0.1"
string-error = "0.1.0"

[dependencies.ncurses]
version = "5.91.0"
default-features = false
features = ["wide"]

# For testing
[lib]
name = "core"
